--- a/ms/Plant_WaterStress.tex
+++ b/ms/Plant_WaterStress.tex
@@ -49,11 +49,12 @@
 
 \section{Background \& Motivation}
 
-Understanding the divers of changes in vegetation composition across large biogeographic gradients is fundamental because (i) vegetation is key to control ecosystem functioning, such as net primary production, and carbon storage, (ii) spatial turnover in species composition explain a large proportion of the global diversity ($\beta$ diversity), and (iii) this is a path towards understanding how vegetation may change as result of environmental change.
+Understanding the divers of changes in vegetation composition across large biogeographic gradients is fundamental because (i) vegetation is key to control ecosystem functioning, such as net primary production, and carbon storage, (ii) spatial turnover in species composition explains a large proportion of the global diversity ($\beta$ diversity), and (iii) understanding these drivers is a path towards predicting how vegetation may change as result of environmental change.
 
+% NEED TO BETTER LINK HERE TRAITS HAVE BEEN PROPOSED TO UNRAVEL THESE DRIVERS
 Beyond species succession pattern along climatic gradients, several
 studies document gradient of functional traits along climatic
-gradients. One specificity of observed pattern of traits variation is
+gradients. Because functional traits are directly related to plant functioning these traits gradients raised the hope to better understand drivers of changes in vegetation. One specificity of observed pattern of traits variation is
 that they are generally weak with generally a higher variation within
 sites than along the climatic gradients \citep[see][]{Wright-2004}. A
 classical example is the variation of leaf mass per area ($LMA$) and
@@ -79,26 +80,25 @@ Plot of pattern for leaf traits extracted from glopnet \citep{Wright-2004}.
 Documenting empirical patterns of variation of plant traits along
 climatic gradient represents a key first step to understand changes in
 vegetation composition, but we also need to propose mechanisms to
-explain these traits patterns. Several approach have been proposed to
-understand these mechanisms.
+explain these traits patterns. 
 
 
-First, there is a long history of studies
+There is a long history of studies
 proposing adaptative arguments based on optimisation approaches with
 ecophysiological models of plant functioning \citep{Makela-2002}. For instance, high $LMA$ has been proposed as an advantage in dry climate because
 stiffer leaves can have a higher resistance to dehydration
 \citep{Wright-2002a,Wright-2002b} or the need to avoid overheating
 under condition of low transpiration \citep{Leigh-2012}.
 
-Higher
-$N_{area}$ in dry climate have also been proposed as strategy to
-maximise photosynthesis \citep{Wright-2003}. This is
-based on the idea that plant are minimising the summed cost of water
-loss and carbon gain
-\citep{Medlyn-2002,Wright-2003,Prentice-2014,Lu-2016,Wang-2017,Dong-2017}. As
-higher $N_{area}$ translate into higher $V_{cmax}$ this allow the
-plant to achieve a high $A_{area}$ even at the low stomatal conductance
-$g_s$ encountered in dry climate.
+%% Higher
+%% $N_{area}$ in dry climate have also been proposed as strategy to
+%% maximise photosynthesis \citep{Wright-2003}. This is
+%% based on the idea that plant are minimising the summed cost of water
+%% loss and carbon gain
+%% \citep{Medlyn-2002,Wright-2003,Prentice-2014,Lu-2016,Wang-2017,Dong-2017}. As
+%% higher $N_{area}$ translate into higher $V_{cmax}$ this allow the
+%% plant to achieve a high $A_{area}$ even at the low stomatal conductance
+%% $g_s$ encountered in dry climate.
 
 Optimisation approaches provide, however, no explanations to the large range of trait variation observed
 within each site. This is because they fail to account for the fact that
@@ -106,7 +106,7 @@ these traits also controls species interaction and the coexistence of
 species with different traits values. 
 Theoretical models \citep{Case-2000,Goldberg-2006,Leimar-2008}
 studies have shown that abiotic constrains and competitive interactions jointly control species coexistence \citep{Chesson-2018} and the range of traits
-value found in a given community. Competition can clearly make the traits deviate from the climatic optimum.  Generally, theses theoretical models are only weakly connected with the physiological processes, real traits, and abiotic gradients. They thus they provide few prediction of how real traits vary along real abiotic gradients. 
+value found in a given community and along environmental gradients. Competition can clearly make the traits deviate from the climatic optimum.  Generally, theses theoretical models are, however, only weakly connected with the physiological processes, real traits, and abiotic gradients and provides no prediction to be compared with field data. 
 
 Recently a few studies have started to connect physiological approach
 and the theoretical approach to build trait-based models of full
@@ -121,11 +121,13 @@ variation across sites. Coexistence is driven by competition for light
 in size-structured meta-populations and the outcomes of competition is
 moderated by environmental factors such as site productivity and disturbance regime.
 
-Our understanding of which and how traits relates to competitive interactions and to abiotic stress is still lacunar. Here we propose to focus on two traits,  $LMA$ and $N_{area}$ which are know to be related to competition for light and water stress gradients.
+Here we propose to focus on two traits, $LMA$ and $N_{area}$ which are know to be related to competition for light and water stress gradients. These two traits are among the most common traits and we start to have a deep understanding of their effect on pant functioning. 
 
 \subsection{$LMA$ and $N_{area}$ response to light}
- In \plant\ the coexistence between tree is mainly related to difference in successional niche underpinned by $LMA$ through competition for light. The coordination between $LMA$ and $LSS$ discriminate different strategies of resource use. Species with low $LMA$ have a greater potential maximum growth and are thus favoured in high light condition, whereas high $LMA$ species have longer leaf life span and thus are more conservative of their resource and are favoured in low light condition. Low $N_{area}$ is related to a higher shade-tolerance for small trees \citep{Falster-2018}, probably because of a higher respiration cost.
+ In \plant\ the coexistence between tree is mainly related to difference in successional niche underpinned by $LMA$ through competition for light. The coordination between $LMA$ and $LSS$ discriminates different strategies of resource use. Species with low $LMA$ have a greater potential maximum growth and are thus favoured in high light condition, whereas high $LMA$ species have longer leaf life span and thus are more conservative of their resource and are favoured in low light condition. Low $N_{area}$ is related to a higher shade-tolerance for small trees \citep{Falster-2018}, because of a higher respiration cost.
 
+
+ 
 \subsection{$LMA$ and $N_{area}$ response to aridity}
 
 High $LMA$ has been proposed as an advantage in dry climate because
@@ -149,48 +151,31 @@ water and carbon gain on the ground that competition should favour
 carbon gain optimisation only \citep{Wolf-2016} and the idea that the
 main effect of water stress come through cavitation and mortality \citep{Sperry-2016,Sperry-2017}. Our knowledge on these alternative mechanisms is however too lacunar to be explored in \plant\ for the moment.
 
-An additional effect of $N_{area}$ along aridity gradient is that higher $N_{area}$ could be related to a lower mechanical resistance of leaf resulting in a shift in the LMA \textit{vs.} leaf lifespan tradeoff to shorter lifespan \citep{Wright-2002a}. A key point that have been raised by \citet{Dong-2017} is that
-$N_{area}$ could be divided in structural and rubisco related N (using
-the relationship of \citet{Onoda-2004}) but this distinction of N in to group is beyond the current implementation of \plant\ .
+An additional effect of $N_{area}$ along aridity gradient is that higher $N_{area}$ could be related to a lower mechanical resistance of leaf resulting in a shift in the LMA \textit{vs.} leaf lifespan tradeoff to shorter lifespan \citep{Wright-2002a}.
 
-
-MECA INCLUDED HERE
-
-HIGH LMA HIGH SHADE TOLERANCE AND SLOW HEIGHT GROWTH IN LOW LIGHT
-
-HIGH LMA FAVOURED IN LESS PRODUCTIVE AREA = drought
-
-=> both shade and drought tolerance
-
-High Narea low shade tolerance and fast growth rate
-
-High Narea hight tolerance to drought
-
-=> shade intol but drought tol
-
-WHAT EPECTATION BUIL ON THAT
+%% \citep{Dong-2017} proposed that
+%% $N_{area}$ could be divided in structural and rubisco related N and that this is structura(using
+%% the relationship of \citet{Onoda-2004}) but this distinction of N in to group is beyond the current implementation of \plant\ .
 
 
 \section{Key questions}
 
-We will explore how the mixture of $LMA$ and $N_{area}$ predicted by \plant\ changes along aridity gradient exploring different assumptions about traits effect on community assembly. To do this we will build on the current version of \plant\ and include water stress effect through the most simple and well know effect, via a direct effect of vapour pressure deficit 'vpd' on leaf photosynthesis. Water stress is clearly more complex than just a change in vpd because it affects also soil water availability, but focusing on how the trait mixture of $LMA$ and $N_{area}$ change along an aridity gradient in function of 'vpd' and competition for light already allows to explore how trait assembly emerge from the interaction of biotic and abiotic effect.
+We propose to extend Plant to include a direct effect of water stress leaf photosynthesis by using a coupled Farquhar photosynthesis model and stomatal conductance model. This allows us to explore water stress effect on photosynthesis through the most simple and well know effect, a direct effect of vapour pressure deficit 'vpd' on leaf photosynthesis. This approach
+  is based on well know mechanisms implemented in most DGVMs. This approach however represents only water stress effect through vpd and ignore water stress through soil water availability. This extended model allow us to explore a classical mechanisms which propose that higher $N_{area}$ could results in higher drought tolerance because higher $N_{area}$ is related to higher $V_{cmax}$ that allows the
+plant to achieve a high $A_{area}$ even at low stomatal conductance
+$g_s$ \citep{Wright-2003}. This $N_{area}$ advantage of could comes at an additional cost than just increase respiration by decreasing leaf lifespan because of lower mechanical resistance \citep{Wright-2002a}.  
 
-\subsection{Based on Farquhar photosynthesis version of plant}
-
-In order to include a mechanistic representation of 'vpd' effect on photosynthesis and test how $N_{area}$ affect the response to drought and light competition a simple solution is to build on the classical Farqhuar model connected to $N_{area}$ and a stomatal
-  conductance model responding along a vpd gradient. This approach
-  is based on well know mechanisms implemented in most DGVMs but
-  represent only water stress effect through vpd and ignore water stress through soil water availability.
-
-Using this model we could test the following mechanisms.
-
+Using this model how the assemblage of LMA and $N_{area}$ change along a gradient of drought stress represented by vpd. Metacommunities are assembled evolutionarily building on the adaptive dynamics framework. More specifically we test the following hypothesis:  
+ 
 \begin{itemize}
 
-\item First we could analyse how LMA assembly vary along a vpd stress gradient (assuming constant temperature).
+\item Light competition selects for a negative correlation between $LMA$ and $N_{area}$.
 
-\item Then we could analyse the joint assembly of $LMA$ and $N_{area}$ as this last traits is know to influence photosynthesis response to vpd.
+\item Higher vpd shift community assembly toward higher $N_{area}$ and smaller range of traits.
 
-\item Finally, we could add the fact that $N_{area}$ influence the leaf lifespan on top of LMA.
+\item Higher vpd shift community assembly toward higher $LMA$.
+
+\item Accounting for $N_{area}$ effect on leaf turnover rate DO WHAT ???CHANGE CORRELATION LESS SHADE TOL TODO REFINE THAT .
 
 \end{itemize}
 
