fix error in name of file saved on cluster for lma dist 40

--- a/ms/Plant_WaterStress.tex
+++ b/ms/Plant_WaterStress.tex
@@ -189,11 +189,11 @@ Using this model how the assemblage of LMA and $N_{area}$ change along a gradien
 
 \item Adaptation of Plant to use a Farquhar photosynthesis model coupled with a stomatal conductance model
 
-\item Trait based parameterisation
+\item Trait based parameterisation of photosynthesis model
 
-\item Vpd variation at constant T
+\item vpd variation at constant temperature
   
-\item Simulations - community assembly 
+\item Simulations of community assembly 
 
 \end{itemize}
 
